fix #50 z-index and effects refactoring

--- a/src/css/ng-slider.css
+++ b/src/css/ng-slider.css
@@ -4,9 +4,7 @@
 
 .jslider.sliderCSS .jslider-pointer { background-color: silver; }
 
-.jslider.disabled {
-  opacity: 0.5;
-}
+.jslider.disabled { opacity: 0.5; }
 
 .jslider.vertical .jslider-bg i,
 .jslider.vertical .jslider-pointer { background-image: url(../img/jslider.round.png) no-repeat 0 0; }
@@ -32,23 +30,23 @@
 .jslider .jslider-bg i { height: 5px; position: absolute; font-size: 0; top: 0; }
 .jslider .jslider-bg .l { width: 50%; background-position: 0 0; left: 0; }
 .jslider .jslider-bg .r { width: 50%; left: 50%; background-position: right 0; }
-.jslider .jslider-bg .v { position: absolute; width: 60%; left: 20%; top: 0; height: 5px; background-repeat: repeat-x; background-position: 0 -40px; }
+.jslider .jslider-bg .v { z-index: 1; position: absolute; width: 60%; left: 20%; top: 0; height: 5px; background-repeat: repeat-x; background-position: 0 -40px; }
 
 .jslider.sliderCSS .jslider-bg .l { width: 100%; left: 0; background-color: silver; background-image: none;}
 .jslider.sliderCSS .jslider-bg .p { left: 0; width: 1px; background-color: transparent; background-image: none;}
-.jslider.sliderCSS .jslider-bg .s { left: 35%; width: 1px; background-color: transparent; background-image: none;z-index: 2;}
+.jslider.sliderCSS .jslider-bg .s { z-index: 1;left: 0; width: 1px; background-color: transparent; background-image: none;}
 .jslider.sliderCSS .jslider-bg .f { left: 0; background-color: transparent; background-image: none;}
-.jslider.sliderCSS .jslider-bg .v { position: absolute; width: 60%; left: 20%; top: 0; height: 5px; background-image: none; background-color: #777575 }
+.jslider.sliderCSS .jslider-bg .v { z-index: 1; position: absolute; width: 60%; left: 20%; top: 0; height: 5px; background-image: none; background-color: #777575 }
 
 .jslider.vertical .jslider-bg { position: relative; height:100%;}
 .jslider.vertical .jslider-bg i { width: 5px; position: absolute; font-size: 0; top: 0; }
 .jslider.vertical .jslider-bg .l { height: 50%; top: 0; left: 12px; background-position: -55px 0; background-repeat: repeat-y}
 .jslider.vertical .jslider-bg .r { height: 50%; top: 50%; left: 12px; background-position: right 0; background-repeat: repeat-y}
-.jslider.vertical .jslider-bg .v { position: absolute; width: 60%; left: 12px; top: 0; height: 100%; background-repeat: repeat-y; background-position: -35px 16px; }
+.jslider.vertical .jslider-bg .v { z-index: 1; position: absolute; width: 60%; left: 12px; top: 0; height: 100%; background-repeat: repeat-y; background-position: -35px 16px; }
 
 .jslider.vertical.sliderCSS .jslider-bg .l { width: 5px; height: 50%; top: 0;  background-color: silver; background-image: none;}
 .jslider.vertical.sliderCSS .jslider-bg .r { width: 5px; height: 50%; top: 50%; background-color: silver; background-image: none;}
-.jslider.vertical.sliderCSS .jslider-bg .v { width: 5px; height: 100%; background-color: #777575; background-image: none;}
+.jslider.vertical.sliderCSS .jslider-bg .v { z-index: 1; width: 5px; height: 100%; background-color: #777575; background-image: none;}
 .jslider.vertical.sliderCSS .jslider-bg .p { left: 12px; width: 5px; background-color: transparent; background-image: none;}
 .jslider.vertical.sliderCSS .jslider-bg .s { left: 12px; width: 5px; background-color: transparent; background-image: none;z-index: 2;height: 1px;}
 .jslider.vertical.sliderCSS .jslider-bg .f { left: 12px; background-color: transparent; background-image: none;}
@@ -57,10 +55,11 @@
 .jslider .jslider-pointer-to { left: 80%; }
 
 .jslider .jslider-pointer-hover { background-position: -20px -60px; }
-.jslider.vertical .jslider-pointer-hover { background-position: 0px -22px; }
 
-.jslider.vertical .jslider-pointer { left: 62%; }
+.jslider.vertical .jslider-pointer { left: 62%; background-position: 80px -3px; }
+.jslider.vertical .jslider-pointer.jslider-pointer-hover { background-position: 0px -22px; }
 .jslider.vertical .jslider-pointer-to { left: 62%; }
+.jslider.vertical .jslider-pointer-to.jslider-pointer-hover { background-position: 0px -22px; }
 
 .jslider .jslider-label { font-size: 9px; line-height: 12px; color: black; opacity: 0.4; white-space: nowrap; padding: 0px 2px; position: absolute; top: -18px; left: 0px; }
 .jslider .jslider-label-to { left: auto; right: 0; }
