--- a/src/css/ng-slider.round.css
+++ b/src/css/ng-slider.round.css
@@ -4,15 +4,17 @@
 .jslider_round.sliderCSS .jslider-bg i,
 .jslider_round.sliderCSS .jslider-pointer { background-image: none; }
 
-.jslider_round.sliderCSS .jslider-pointer { background-color: #f00; width: 12px; height: 12px; top: -3px; border-radius: 50%; z-index: 3;}
+.jslider_round.sliderCSS .jslider-pointer { z-index: 3; background-color: #615959; width: 10px; height: 10px; border-radius: 50%; top: -3px;}
 
-.jslider_round .jslider-pointer { width: 20px; height: 17px; top: -6px; margin-left: -8px; }
+.jslider_round .jslider-pointer { z-index: 2; width: 20px; height: 17px; top: -6px; }
 
 .jslider_round.vertical .jslider-bg i,
 .jslider_round.vertical .jslider-pointer { background-image: url(../img/jslider.round.vertical.png); }
+
 .jslider_round.vertical.sliderCSS .jslider-bg i,
 .jslider_round.vertical.sliderCSS .jslider-pointer { background-image: none; }
-.jslider_round.vertical.sliderCSS .jslider-pointer { background-color: rgb(102, 98, 98); width: 12px; height: 12px; left: 16px; border-radius: 50%; z-index: 3; }
+.jslider_round.vertical.sliderCSS .jslider-pointer { left: 16px; background-color: #615959; width: 10px; height: 10px; border-radius: 50%; }
 
-.jslider_round.vertical .jslider-pointer { width: 20px; height: 17px; top: -6px; margin-left: -8px; background-position: 0px -2px;}
+.jslider_round.vertical .jslider-pointer { width: 20px; height: 17px; top: -6px; margin-left: -7px; }
+
 
